--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2909,32 +2909,32 @@ fieldset:disabled a.btn {
 }
 
 .btn-info {
-    color: #ffffff;
+    color: #000000;
     background-color: #04c7e0;
     border-color: #04c7e0;
 }
 .btn-info:hover {
-    color: #ffffff;
+    color: #000000;
     background-color: #03a6ba;
     border-color: #039aae;
 }
 .btn-info:focus,
 .btn-info.focus {
-    color: #ffffff;
+    color: #000000;
     background-color: #03a6ba;
     border-color: #039aae;
     box-shadow: 0 0 0 0.2rem rgba(42, 207, 229, 0.5);
 }
 .btn-info.disabled,
 .btn-info:disabled {
-    color: #ffffff;
+    color: #000000;
     background-color: #04c7e0;
     border-color: #04c7e0;
 }
 .btn-info:not(:disabled):not(.disabled):active,
 .btn-info:not(:disabled):not(.disabled).active,
 .show > .btn-info.dropdown-toggle {
-    color: #ffffff;
+    color: #000000;
     background-color: #039aae;
     border-color: #038fa1;
 }
