--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18245,5 +18245,27 @@ html[dir="rtl"] .sidebar li > a .caret:before {
   text-align: center;
   background: none;
 }
+.overlay {
+    position: absolute;
+    bottom: 0;
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.5); /* Black see-through */
+    color: #f1f1f1;
+    width: 100%;
+    height: 100%;
+    transition: .5s ease;
+    opacity:0;
+    color: white;
+    font-size: 20px;
+    padding-top: 50%;
+    text-align: center;
+    background-clip: border-box;
+    border: 1px solid #e5e9f2;
+    font-weight: bold;
+   
+  }
 
+  .card:hover .overlay {
+    opacity: 1;
+  }
 /*# sourceMappingURL=style.css.map */
