--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18248,17 +18248,18 @@ html[dir="rtl"] .sidebar li > a .caret:before {
 }
 .overlay {
     position: absolute;
-    bottom: 0;
+    top: 50%;
+    left: 50%;
+  transform: translate(-50%, -50%);
     background: rgb(0, 0, 0);
-    background: rgba(0, 0, 0, 0.5); /* Black see-through */
+    background: rgba(60,60,60); /* Black see-through */
     color: #f1f1f1;
     width: 100%;
-    height: 100%;
     transition: .5s ease;
     opacity:0;
     color: white;
     font-size: 20px;
-    padding-top: 50%;
+
     text-align: center;
     background-clip: border-box;
     border: 1px solid #e5e9f2;
