--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
 
 /* .background-container {
     background-image: url('/theme/images/IMG_9696-small-1-640x480.png');
@@ -13,73 +13,92 @@
     z-index: -1;
 } */
 
-body{
-    font-family: 'Poppins', sans-serif;
+body {
+    font-family: "Poppins", sans-serif;
     background: linear-gradient(
-      180deg, /* Angle of the gradient */
-      #04082ee8, 
-      /* #174699e8,  */
-      #1e3a8ae8,
-      #174699e8, 
-      #1e3a8ae8,
-      #04082ee8
+        180deg,
+        /* Angle of the gradient */ #04082ee8,
+        /* #174699e8,  */ #1e3a8ae8,
+        #174699e8,
+        #1e3a8ae8,
+        #04082ee8
     );
 }
 
 .animate-text {
     animation: fadeInUp 2.5s ease-in-out;
-  }
-  @keyframes fadeInUp {
+}
+@keyframes fadeInUp {
     0% {
-      opacity: 0;
-      transform: translateY(10px);
+        opacity: 0;
+        transform: translateY(10px);
     }
     100% {
-      opacity: 1;
-      transform: translateY(0);
+        opacity: 1;
+        transform: translateY(0);
     }
-  }
+}
 
 /*------------ Login container ------------*/
 
-.box-area{
+.box-area {
     width: 930px;
 }
 
 /*------------ Right box ------------*/
 
-.right-box{
+.right-box {
     padding: 40px 30px 40px 40px;
 }
 
 /*------------ Custom Placeholder ------------*/
 
-::placeholder{
+::placeholder {
     font-size: 16px;
 }
 
-.rounded-4{
+.rounded-4 {
     border-radius: 20px;
 }
-.rounded-5{
+.rounded-5 {
     border-radius: 30px;
 }
 
-
 /*------------ For small screens------------*/
 
-@media only screen and (max-width: 768px){
-
-     .box-area{
+@media only screen and (max-width: 768px) {
+    .box-area {
         margin: 0 20px;
-
-     }
-     .left-box{
+    }
+    .left-box {
         height: 100px;
         overflow: hidden;
-     }
-     .right-box{
+    }
+    .right-box {
         padding: 20px;
-     }
+    }
+}
 
+.form-group {
+    position: relative;
+}
+
+#show-password {
+    position: absolute;
+    right: 10px; /* Adjust distance from the right as needed */
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    font-size: 1.25rem; /* Adjust icon size as needed */
+    color: #000000; /* Optional: change icon color */
+}
+
+#show-password-confirm {
+    position: absolute;
+    right: 10px; /* Adjust distance from the right as needed */
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    font-size: 1.25rem; /* Adjust icon size as needed */
+    color: #000000; /* Optional: change icon color */
 }
